--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,20 +1,40 @@
 body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
 .content {
-  display: grid;
-  grid-template-rows: 150px auto;
+    display: grid;
+    grid-template-rows: 150px 100vh;
 }
 .navbar {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 }
 .navbarLeft,
 .navbarRight {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-content: center;
+}
+.navbarLeft {
+    background-color: forestgreen;
+}
+.navbarRight {
+    background-color: blue;
+}
+.hero {
+    display: flex;
+}
+.heroButton {
+    color: red;
+    background-color: blue;
+    align-self: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+.hero {
+    background-color: aqua;
 }
